apps/theater-dashboard/templates/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: theater-dashboard
  namespace: theater-dashboard
  labels:
    app: theater-dashboard
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
    protocol: TCP
  selector:
    app: theater-dashboard
