apps/theater-dashboard/templates/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: theater-dashboard
  namespace: theater-dashboard
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.middlewares: kube-system-redirect-https@kubernetescrd
    traefik.ingress.kubernetes.io/frontend-entry-points: http,https
    traefik.ingress.kubernetes.io/redirect-entry-point: https
    traefik.ingress.kubernetes.io/redirect-permanent: "true"
spec:
  rules:
  - host: theater.kelbert.fr
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: theater-dashboard
            port:
              number: 80
  tls:
  - secretName: theater-kelbert-fr-tls
    hosts:
    - theater.kelbert.fr
